# fitholic

./: .gitignore  README.md  pyproject.toml
apps/api/: .gitignore  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 213afeab79bf_add_server_default_to_user_timestamps.py  36b559f84a69_add_user_profile_and_measurements_tables.py  506fc9977d88_add_workout_tables.py  77b4e0013bd0_add_chat_models.py  9037cc2779ae_add_scheduled_status_to_workout_logs.py  926198d77cc8_create_users_table.py  c6b6ccc87c49_add_workout_log_status_and_time_fields.py  ca516f638c62_add_exercises_table.py
apps/api/app/: main.py
apps/api/app/agents/: config.py  llm_config.py
apps/api/app/agents/nodes/: base.py  workout.py
apps/api/app/agents/workflows/: workout_generation.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: api.py
apps/api/app/core/: config.py  database.py  deps.py  logging.py  security.py
apps/api/app/crud/: __init__.py  base.py  exercises.py  user_measurement.py  user_profile.py  workouts.py
apps/api/app/models/: __init__.py  chat.py  exercise.py  user.py  user_measurement.py  user_profile.py  workout.py
apps/api/app/schemas/: __init__.py  auth.py  chat.py  exercise.py  user.py  user_measurement.py  user_profile.py  workout.py
apps/api/app/services/: ai.py  exercise_service.py  user.py
apps/api/app/services/ai/: chat_service.py  exercise_generator.py  workout_generator.py
apps/api/app/services/chat/: context.py  history.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py
(+91 files in other folders)
