[tool.poetry]
name = "fitholic"
version = "0.1.0"
description = "AI-powered fitness application"
authors = ["SuperJackfruit"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
pydantic = "^2.10.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
bcrypt = "^4.1.2"
email-validator = "^2.2.0"
slowapi = "^0.1.9"
langchain = "^0.3.14"
langchain-google-genai = "^2.0.8"
langchain-community = "^0.3.14"
langgraph = "^0.2.62"
langchain-openai = "^0.3.0"
langchain-anthropic = "^0.3.1"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.0.0"
youtube-search = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "<0.25.0"
httpx = "^0.28.1"
asgi-lifespan = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
